Autoscroll GFS and GFC should populate positions in widget properly.

When the fling controller generates GSU and GSE events, it uses the
positions of GFS and GFC events. This cl properly populates the positions
in widget of GFS and GFC events that are generated in RWHI. This fix is
enough to address crbug.com/769390 where scrolling stops after deletion
of the DOM element and rehittesting fails due to GSUs having (0,0)
coordinates.
In the following cl both position_in_widget and position_in_screen
of autoscroll GFS and GFCs will get populated in the browser process
using the coordinates of mouse middle click and mouse move events:
[WIP] https://chromium-review.googlesource.com/c/chromium/src/+/1239174

Bug: 769390
Test: AutoscrollBrowserTest.GSUGSEValidPositionInWidget
Change-Id: Ib5e12fa57b5246e5cb1ae349d3081a98863eca31
Reviewed-on: https://chromium-review.googlesource.com/c/1452505
Reviewed-by: Timothy Dresser <tdresser@chromium.org>
Commit-Queue: Sahel Sharify <sahel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#630037}
Former-commit-id: 830022665a7acbb7f8c8e05540a283ac12daa2ca